# Computational-Physics

./: .gitignore  README.md
Exercise 10/: CMakeLists.txt
Exercise 10/src/: trapezoidal.c
Exercise 12/: CMakeLists.txt
Exercise 12/src/: period.c
Exercise 13/: CMakeLists.txt
Exercise 13/src/: montecarlo.c
Exercise 2/: CMakeLists.txt
Exercise 2/doc/: Exercises2.txt
Exercise 2/src/: bank_account_float.c  bank_account_integer.c  comparison.c  comparison.h  equation.c  equation.h  input.c  linear.c  linear.h  results.h  sinus.c  stone.c  stone.h
Exercise 3/: CMakeLists.txt
Exercise 3/doc/: Exercises3.txt
Exercise 3/src/: equation.c  equation.h  repeat.c  repeat.h  results.h  sqrt.c
Exercise 4/: CMakeLists.txt
Exercise 4/doc/: Exercises4.txt
Exercise 4/src/: ball.c  ball.h  equation.c  hello.c  stone.c  stone.h
Exercise 5/: CMakeLists.txt
Exercise 5/doc/: Exercises5_ger.txt
Exercise 5/src/: input.h  progression_read.c  progression_write.c
